--- a/panel/panel-preferences-dialog.glade
+++ b/panel/panel-preferences-dialog.glade
@@ -72,7 +72,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="tooltip_text">Add a new panel</property>
+                    <property name="tooltip_text" translatable="yes">Add a new panel</property>
                     <child>
                       <object class="GtkImage" id="image1">
                         <property name="visible">True</property>
@@ -91,7 +91,7 @@
                     <property name="sensitive">False</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <property name="tooltip_text">Remove the currently selected panel</property>
+                    <property name="tooltip_text" translatable="yes">Remove the currently selected panel</property>
                     <child>
                       <object class="GtkImage" id="image2">
                         <property name="visible">True</property>
@@ -234,7 +234,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
-                                    <property name="tooltip_text">Select this option to hide the handles of the panel and lock its position.</property>
+                                    <property name="tooltip_text" translatable="yes">Select this option to hide the handles of the panel and lock its position.</property>
                                     <property name="use_underline">True</property>
                                     <property name="draw_indicator">True</property>
                                   </object>
@@ -590,7 +590,7 @@
                             <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text">Move currently selected item up by one row</property>
+                            <property name="tooltip_text" translatable="yes">Move currently selected item up by one row</property>
                             <child>
                               <object class="GtkImage" id="image3">
                                 <property name="visible">True</property>
@@ -609,7 +609,7 @@
                             <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text">Move currently selected item down by one row</property>
+                            <property name="tooltip_text" translatable="yes">Move currently selected item down by one row</property>
                             <child>
                               <object class="GtkImage" id="image4">
                                 <property name="visible">True</property>
@@ -628,7 +628,7 @@
                             <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text">Add new item to this panel</property>
+                            <property name="tooltip_text" translatable="yes">Add new item to this panel</property>
                             <child>
                               <object class="GtkImage" id="image5">
                                 <property name="visible">True</property>
@@ -647,7 +647,7 @@
                             <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text">Remove currently selected item</property>
+                            <property name="tooltip_text" translatable="yes">Remove currently selected item</property>
                             <child>
                               <object class="GtkImage" id="image6">
                                 <property name="visible">True</property>
@@ -666,7 +666,7 @@
                             <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text">Edit the currently selected item</property>
+                            <property name="tooltip_text" translatable="yes">Edit the currently selected item</property>
                             <child>
                               <object class="GtkImage" id="image7">
                                 <property name="visible">True</property>
@@ -685,7 +685,7 @@
                             <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text">Show about information of the currently selected item</property>
+                            <property name="tooltip_text" translatable="yes">Show about information of the currently selected item</property>
                             <child>
                               <object class="GtkImage" id="image8">
                                 <property name="visible">True</property>
@@ -811,15 +811,15 @@
   </object>
   <object class="GtkSizeGroup" id="composing-sizegroup">
     <widgets>
-      <widget name="label7"/>
-      <widget name="label9"/>
       <widget name="label10"/>
+      <widget name="label9"/>
+      <widget name="label7"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="display-sizegroup">
     <widgets>
-      <widget name="label1"/>
       <widget name="label13"/>
+      <widget name="label1"/>
     </widgets>
   </object>
 </interface>
