--- a/panel/panel-preferences-dialog.glade
+++ b/panel/panel-preferences-dialog.glade
@@ -403,7 +403,7 @@
                                 <child>
                                   <object class="GtkLabel" id="label7">
                                     <property name="visible">True</property>
-                                    <property name="label" translatable="yes">_Alpha:</property>
+                                    <property name="label" translatable="yes" comments="I18N: label for the background alha slider">_Alpha:</property>
                                     <property name="use_underline">True</property>
                                     <property name="mnemonic_widget">alpha-scale</property>
                                   </object>
@@ -466,7 +466,7 @@
                                   <object class="GtkLabel" id="label9">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">_Enter:</property>
+                                    <property name="label" translatable="yes" comments="I18N: label for the enter transparency slider">_Enter:</property>
                                     <property name="use_underline">True</property>
                                     <property name="mnemonic_widget">enter-opacity-scale</property>
                                   </object>
@@ -478,7 +478,7 @@
                                   <object class="GtkLabel" id="label10">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">_Leave:</property>
+                                    <property name="label" translatable="yes" comments="I18N: label for the leave transparency slider">_Leave:</property>
                                     <property name="use_underline">True</property>
                                     <property name="mnemonic_widget">leave-opacity-scale</property>
                                   </object>
@@ -811,15 +811,15 @@
   </object>
   <object class="GtkSizeGroup" id="composing-sizegroup">
     <widgets>
-      <widget name="label10"/>
-      <widget name="label9"/>
       <widget name="label7"/>
+      <widget name="label9"/>
+      <widget name="label10"/>
     </widgets>
   </object>
   <object class="GtkSizeGroup" id="display-sizegroup">
     <widgets>
-      <widget name="label13"/>
       <widget name="label1"/>
+      <widget name="label13"/>
     </widgets>
   </object>
 </interface>
