Add some icons and rename to internal tasklist name.

--- a/docs/manual/add-new-items.page
+++ b/docs/manual/add-new-items.page
@@ -18,4 +18,8 @@
 
   <title>Add New Plugins</title>
 
+  <figure>
+    <title>Add new items dialog</title>
+    <media type="image" src="figures/add-new-items.png" mime="image/png" style="right"/>
+  </figure>
 </page>
