--- a/docs/manual/preferences.page
+++ b/docs/manual/preferences.page
@@ -17,4 +17,8 @@
 
   <title>Preferences</title>
 
+  <figure>
+    <title>Panel's Preferences dialog</title>
+    <media type="image" src="figures/preferences.png" mime="image/png" style="right"/>
+  </figure>
 </page>
