--- a/docs/manual/tasklist.page
+++ b/docs/manual/tasklist.page
@@ -1,7 +1,7 @@
 <page xmlns="http://projectmallard.org/1.0/"
       xmlns:e="http://projectmallard.org/experimental/"
       type="topic"
-      id="windowbuttons">
+      id="tasklist">
 
   <info>
     <link type="guide" xref="index#plugins"/>
@@ -22,6 +22,10 @@
   <section id="properties">
     <title>Properties</title>
 
+    <figure>
+      <title>Window button's properties dialog</title>
+      <media type="image" src="figures/tasklist.png" mime="image/png" style="right"/>
+    </figure>
   </section>
 
   <section id="theming">
