--- a/docs/manual/applicationsmenu.page
+++ b/docs/manual/applicationsmenu.page
@@ -22,6 +22,10 @@
   <section id="properties">
     <title>Properties</title>
 
+    <figure>
+      <title>Applications menu's properties dialog</title>
+      <media type="image" src="figures/applicationsmenu.png" mime="image/png" style="right"/>
+    </figure>
   </section>
 
   <section id="theming">
