--- a/docs/manual/clock.page
+++ b/docs/manual/clock.page
@@ -27,6 +27,10 @@
   <section id="theming">
     <title>Style Properties</title>
 
+    <figure>
+      <title>Clock's properties dialog</title>
+      <media type="image" src="figures/clock.png" mime="image/png" style="right"/>
+    </figure>
   </section>
 
 </page>
