--- a/plugins/separator/separator-dialog.glade
+++ b/plugins/separator/separator-dialog.glade
@@ -22,13 +22,11 @@
             <child>
               <object class="GtkAlignment" id="alignment1">
                 <property name="visible">True</property>
-                <property name="top_padding">6</property>
-                <property name="bottom_padding">12</property>
-                <property name="left_padding">18</property>
-                <property name="right_padding">6</property>
+                <property name="left_padding">12</property>
                 <child>
                   <object class="GtkVBox" id="vbox3">
                     <property name="visible">True</property>
+                    <property name="border_width">6</property>
                     <property name="orientation">vertical</property>
                     <property name="spacing">6</property>
                     <child>
