Add a pager mode with normal buttons.
This removes the old 'Show workspace names' option and adds a
pager with normal buttons and workspace names instead. This
looks much more like the old pager known in pre-4.0 Xfce versions.

--- a/plugins/pager/pager-dialog.glade
+++ b/plugins/pager/pager-dialog.glade
@@ -70,11 +70,12 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="show-names">
-                            <property name="label" translatable="yes">Show workspace _names</property>
+                          <object class="GtkCheckButton" id="miniature-view">
+                            <property name="label" translatable="yes">Show mi_niature view</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
+                            <property name="tooltip_text" translatable="yes">Show a miniature view of the workspace with rectangles for the visible windows</property>
                             <property name="use_underline">True</property>
                             <property name="draw_indicator">True</property>
                           </object>
