--- a/panel/panel-preferences-dialog.glade
+++ b/panel/panel-preferences-dialog.glade
@@ -49,9 +49,9 @@
     </data>
   </object>
   <object class="XfceTitledDialog" id="dialog">
-    <property name="title" translatable="yes">Xfce Panel</property>
+    <property name="title" translatable="yes">Panel</property>
     <property name="window_position">center-on-parent</property>
-    <property name="icon_name">gtk-preferences</property>
+    <property name="icon_name">xfce4-panel</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
