Make viewports work in the tasklist (bug #6898).

--- a/plugins/tasklist/tasklist-dialog.glade
+++ b/plugins/tasklist/tasklist-dialog.glade
@@ -256,7 +256,7 @@
                         <property name="spacing">6</property>
                         <child>
                           <object class="GtkCheckButton" id="include-all-workspaces">
-                            <property name="label" translatable="yes">Show windows from _all workspaces</property>
+                            <property name="label" translatable="yes">Show windows from _all workspaces or viewports</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">False</property>
