--- a/plugins/tasklist/tasklist-dialog.glade
+++ b/plugins/tasklist/tasklist-dialog.glade
@@ -399,6 +399,9 @@
       <row>
         <col id="0" translatable="yes">Group title and window title</col>
       </row>
+      <row>
+        <col id="0" translatable="yes">None, allow drag-and-drop</col>
+      </row>
     </data>
   </object>
 </interface>
