Actions: Query visibility and save as strings.
We query the commands and dbus to check if the users is allowed
to preform an action. If not the menu item or button is insensitive.

Also store the actions as strings in xfconf, bit nicer.

--- a/plugins/actions/actions-dialog.glade
+++ b/plugins/actions/actions-dialog.glade
@@ -261,6 +261,8 @@
     <columns>
       <!-- column-name hidden -->
       <column type="gboolean"/>
+      <!-- column-name display-name -->
+      <column type="gchararray"/>
       <!-- column-name name -->
       <column type="gchararray"/>
       <!-- column-name type -->
